# antigravity-sdk-sample-docs-goal

./: .clasp.json.example  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
appsscript/: Code.js  Sidebar.html
prompts/: agent_instructions.md  researcher_instructions.md
src/: agent.py  docs_tool.py  research_tool.py  server.py
